# GUI-sim

./: .gitignore
INHA-Player/src/brain/config/: config.yaml
INHA-Player/src/brain/launch/: launch.py
INHA-Player/web_control/backend/: app.py  ros_bridge.py
INHA-Player/web_control/frontend/: package-lock.json
simul-bridge-gui/: .gitignore  readme.md
simul-bridge-gui/Defender/: .gitignore  README.md
simul-bridge-gui/Defender/src/brain/: CMakeLists.txt
simul-bridge-gui/GoalKeeper/: README.md
simul-bridge-gui/GoalKeeper/src/brain/: CMakeLists.txt
simul-bridge-gui/GoalKeeper/src/vision/: CMakeLists.txt  package.xml  readme.md
simul-bridge-gui/GoalKeeper/src/vision/src/model/trt/: CMakeLists.txt  impl.cpp
simul-bridge-gui/INHA-Player/: README.md
simul-bridge-gui/INHA-Player/configs/: fastdds.xml
simul-bridge-gui/INHA-Player/scripts/: sim_start.sh  sim_stop.sh  start.sh  stop.sh
simul-bridge-gui/INHA-Player/simulation_db/: data_collection.csv  requirements.txt  run_sim.py  simulation.py  soccer_sim.db
simul-bridge-gui/INHA-Player/soccer_simulation/: run_sim.py  soccer_sim.db
simul-bridge-gui/Striker/: .gitignore  README.md
simul-bridge-gui/Striker/simulation_db/: costmap.py  run_game.py  simulation_pygame.py  striker_sim.py
simul-bridge-gui/Striker/soccer_simulation/: README.md  db_manager.py  start_sim.sh
simul-bridge-gui/web_control/backend/: app.py  gc_monitor.py  requirements.txt  ros_bridge.py  ssh_manager.py  strategy_deployed.xml  udp_monitor.py
simul-bridge-gui/web_control/frontend/: index.html  package.json  vite.config.ts
(+220 files in other folders)
